[tool.poetry]
name = "rcdb-scraper"
version = "0.1.0"
description = "Create a CSV file with roller coaster stats from RCDB"
authors = ["Calum Dingwall (https://github.com/caburum)"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
